[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "starlette-responses-kit"
dynamic = ["version"]
description = 'Extension containing custom responses for starlette.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = [
  "python",
  "starlette",
  "starlette-extension",
  "fastapi-extension",
]
authors = [
  { name = "WindowGenerator", email = "chudov42@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "starlette>=0.27.0",
    "typing-extensions>=4.8.0",
    # TODO: remove this pin after upgrading Starlette 0.31.1
    "anyio>=3.7.1,<5.0.0",
]

[project.optional-dependencies]
tests = [
  "coverage[toml]>=6.5",
  "pytest-cov",
  "pytest",
  "httpx>=0.22.0",
  "trio==0.24.0",
  "mypy>=1.0.0",
]

[project.urls]
Documentation = "https://github.com/WindowGenerator/starlette-responses-kit#readme"
Issues = "https://github.com/WindowGenerator/starlette-responses-kit/issues"
Source = "https://github.com/WindowGenerator/starlette-responses-kit"

[tool.hatch.version]
path = "starlette_responses_kit/__init__.py"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
check = "mypy --install-types --non-interactive {args:starlette_responses_kit}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[publish.index.repos.main]
url = "https://upload.pypi.org/legacy/"


[publish.index.repos.test]
url = "https://test.pypi.org/legacy/"
